<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity" android:orientation="vertical" android:gravity="center">
    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/question_text_view" android:padding="24dp"
            android:gravity="center|center_horizontal|center_vertical"
            tools:text="@string/question_australia" android:hint="@string/new_question"/>
    <LinearLayout
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
        <Button
                android:text="@string/true_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:id="@+id/true_button" android:layout_weight="1"
                android:contentDescription="@string/true_button_description"/>
        <Button
                android:text="@string/false_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:id="@+id/false_button" android:layout_weight="1"
                android:contentDescription="@string/false_description_button"/>
    </LinearLayout>
    <LinearLayout
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
        <Button
                android:layout_width="0dp"
                android:layout_height="wrap_content" android:id="@+id/cheat_button" android:layout_weight="1"
                android:text="@string/cheat_button" android:layout_marginTop="24dp"/>
    </LinearLayout>
    <LinearLayout
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
        <ImageButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" app:srcCompat="@drawable/arrow_left"
                android:id="@+id/previous_button"
                android:layout_weight="1" android:contentDescription="@string/previous_description_button"/>
        <ImageButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" app:srcCompat="@drawable/arrow_right"
                android:id="@+id/next_button" android:layout_weight="1"
                android:contentDescription="@string/next_description_button"/>
    </LinearLayout>
</LinearLayout>